--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="intro__content">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
     </section>
     <footer class="footer">
-        <h4 class="footer__title">© 2025. Danilo L. Martins</h4>
+        <p class="footer__title">© 2025. Danilo L. Martins</p>
     </footer>
     </div>
 </body>
