--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Danilo Martins" />
+    <meta name="description" content="Projeto Homeland" />
+    <meta name="keywords" content="homeland, tripleten, coding" />
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <title>Document</title>
 </head>
 <body>
