--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
         <img class="header__image" src="./images/header-image.jpg" alt="imagem cabeçalho descrevendo uma paisagem costeira"/>
         </div>
     </header>
-    <section class="intro">
-        <h2 class="intro__title">Conheça um pouco mais sobre a localização dos seus amigos</h2>
-        <p class="intro__quote">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.</p>
-        <p class="intro__quote-credit">— Joseph Beuys</p>
-        <p class="intro__content">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
-    </section>
+    <main class="content">
+      <section class="intro">
+          <h2 class="intro__title">Conheça um pouco mais sobre a localização dos seus amigos</h2>
+          <p class="intro__quote">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.</p>
+          <p class="intro__quote-credit">— Joseph Beuys</p>
+          <p class="intro__content">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
+      </section>
+    </main>
     <footer class="footer">
         <p class="footer__title">© 2025. Danilo L. Martins</p>
     </footer>
