correção para a plataforma

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="page">
     <header class="header">
-        <nav class="nav">
-        <img src="./images/logo.svg" alt="logo da página" class="nav__logo"></nav>
+        <nav class="header__nav">
+        <img src="./images/logo.svg" alt="logo da página" class="header__nav-logo"></nav>
         <h1 class="header__title"> De Pátria para Pátria</h1>
         <p class="header__description">Uma jornada épica do Kentucky ao Burundi passando pelo País de Gales e Ucrânia</p>
         <div class="header__image-wrapper">
